# poc-microservice

./: README.md  TODO.MD  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.local.yml  docker-compose.yml
services/notification/app/: config.py  consumer.py  dispatcher.py
services/order/app/: config.py  consumer.py  db.py  main.py  models.py
services/user/app/: config.py  db.py  main.py  models.py  publisher.py  schemas.py
shared/events/: user.py
